# HuffmanEncoding

./: MESON_COMMANDS_CHEATSHEET.md  README.md  _compressed.txt  _uncompressed.txt  ascii_compressed.txt  bitFile.txt  compressed.txt  meson.build  myBitFile.txt  solution-bitconverter.executable  solution-compress.executable  solution-uncompress.executable  tester.txt  uncompressed.txt
.devcontainer/: Dockerfile  devcontainer.json
build_scripts/: generate_coverage_report  run-clang-format.py
data/: input.txt
src/: compress.cpp  meson.build  uncompress.cpp
src/bitStream/: meson.build
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp  meson.build
test/: meson.build  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCNode.cpp  test_HCTree.cpp
